[package]
name = "kuber_roles"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
err_tools = "0.1.1"
serde = "1.0.130"
serde_json = "1.0.67"
serde_derive = "1.0.130"
actix-web = "3.3.2"
